--- a/README
+++ b/README
@@ -1,13 +1,25 @@
-mysqlproxy
 
-This is the mysqlproxy module.
+This is the mysqlproxy module only for testing.
 
-Example usage:
+Installation
+============
 
-class {
-  'mysqlproxy':
-    address   => '127.0.0.1:9999',
-    luascript => 'mc.lua',
-    options   => '--log-use-syslog',
-    backends  => ['mysql3.ugent.be:3306', 'mysql3.ugent.be:3307'];
-}
+Copy this entire directory as is into:
+
+    /etc/puppet/modules/mysqlproxy
+
+
+Usage
+=====
+
+To install a package with a configuration and lua script:
+
+    class { 'mysqlproxy':
+      address   => '0.0.0.0:3306',
+      luascript => '/usr/share/lua/rw-splitting.lua',
+      sourceluascript => "mysqlproxy/test/test.lua",
+      options   => '--log-use-syslog',
+      backends  => ['mysql-master-1:3306', 'mysql-master-2:3307'];
+      slaves    => ['mysql-slave-1:3306', 'mysql-slave-2:3306'];
+      luascript => '/usr/share/lua/rw-splitting.lua',
+    }
